# RT_edge

./: .gitignore  CMakeLists.txt  README.md
src/: JSONconfig.cpp  MainWindow.cpp  Model.cpp  Renderer.cpp  SampleRenderer.cpp  main.cpp
src/cuda/: CUDA.hpp  anyHit.cu  callableProgram.cu  closestHit.cu  devicePrograms.cu  environmentRender.cu  missHit.cu  phaseDetection.cu  rayLaunch.cu
src/include/: CUDABuffer.h  CUDABuffer.hpp  CameraType.hpp  ControlParams.hpp  CtrolParams.hpp  JSONconfig.hpp  LaunchParams.h  LaunchParams.hpp  MainWindow.hpp  MathFunction.hpp  Model.hpp  Renderer.hpp  SampleRenderer.h  SampleRenderer.hpp
support/ImGui/: CMakeLists.txt
support/gdt/cmake/: FindOptiX.cmake  bin2c_wrapper.cmake  configure_optix.cmake
support/glfWindow/: CMakeLists.txt  GLFWindow.cpp  GLFWindow.h
